VOTE-783 Fix container alignment, override sign up block styles

--- a/web/themes/custom/votegov/src/sass/components/contact-identifier.scss
+++ b/web/themes/custom/votegov/src/sass/components/contact-identifier.scss
@@ -12,6 +12,10 @@
         }
     }
 
+    .usa-identifier__container {
+        padding-left: 0;
+    }
+
     .usa-identifier__logo{
         height:36px;
         width:172px;
